<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_cs_token"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edittext_cs_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_cs_token_hint"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <Button
        android:id="@+id/button_pay"
        android:text="@string/string_pay_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_radioButtonLabel"
        android:paddingTop="20dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioButton
            android:id="@+id/radio_button_qa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radion_button_qa"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_button_fts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_fts"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_button_emvtest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_emvtest"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

</LinearLayout>